--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,9 @@
         "fideloper/proxy": "^4.0",
         "hesto/multi-auth": "^2.0",
         "laravel/framework": "5.7.*",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "maatwebsite/excel": "^2.1",
+        "php-junior/laravel-video-chat": "^1.1"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
